Fix popup.less layout issues for Chromium browsers (#328)
Fixes layout issues on Chromium browsers due to LayoutFlexNewColumnAlgorithm.

--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -36,6 +36,7 @@ body {
     min-width: 260px;
     overflow-x: hidden;
     white-space: nowrap;
+    width: min-content;
 }
 
 @media (min-resolution: 192dpi) {
